--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,26 @@
 
 body {
     width: 100vw;
-    background-color: pink;
+    height: 100vh;
+    background-image: linear-gradient(rgb(255, 88, 116), pink);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+    height: 80px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-bottom: 2px solid rgb(199, 94, 112);
+    font-size: 32px;
+    padding: 10px 30px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav:hover{
+    color: rgb(255, 88, 116);
+    background-color: white;
+    transition: 0.3s background linear;
 }
