--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,11 @@ nav:hover{
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 24px;
+    color: black;
+}
+
+a {
+    text-decoration: none;
 }
 
 .children-boxes:hover{
